# sLM-web-threat-analyzer

./: README.md  pyproject.toml
conf/: conf.xml
src/: main.py
src/api/: routes.py
src/common/: ConfigManager.py  Constants.py  LoggerManager.py
src/core/: JsonIndexer.py  PayloadExtractor.py  Retriever.py
src/utils/: CUDALimit.py  ConfigUtils.py  DecodeURL.py  FileUtils.py  Singleton.py  XMLUtils.py
src/utils/logger/: MPLogHandler.py  MPLogger.py
